# swarm-quadrotor-mapping

./: .gitignore  PRD_Swarm_Quadrotor_Geodesy.md  Roadmap_Swarm_Quadrotor.md
Debug/: 7_drones_test_waypoint.md
MatlabtoPython/: quadrotor_PID_Hinf_Backstepping_decentralized.m  quadrotor_PID_Hinf_Backstepping_decentralized_simulink.slx  quadrotor_PID_Hinf_Synthesis_decentralized.m  quadrotor_PID_LQR_decentralized.m  (+2 more)
swarm_ws/src/swarm_high_level/: package.xml  setup.cfg  setup.py
swarm_ws/src/swarm_high_level/swarm_high_level/: bezier_path.py  heartbeat_p2p.py  simulator_kinematics.py  takeoff_manager.py  voronoi_node.py
swarm_ws/src/swarm_sim/: CMakeLists.txt  package.xml
swarm_ws/src/swarm_sim/launch/: sim_launch.py  swarm_launch.py
swarm_ws/src/swarm_sim/models/iris_1/: model.sdf
swarm_ws/src/swarm_sim/models/iris_2/: model.sdf
swarm_ws/src/swarm_sim/models/iris_3/: model.sdf
swarm_ws/src/swarm_sim/models/iris_4/: model.sdf
swarm_ws/src/swarm_sim/models/iris_5/: model.sdf
swarm_ws/src/swarm_sim/models/iris_6/: model.sdf
swarm_ws/src/swarm_sim/models/iris_7/: model.sdf
swarm_ws/src/swarm_sim/models/iris_base/: model.config  model.sdf
swarm_ws/src/swarm_sim/results/multi_agent/: .gitignore  flight_data_log_lqr_iris_1.csv  flight_data_log_lqr_iris_2.csv  flight_data_log_lqr_iris_3.csv  flight_data_log_lqr_iris_4.csv  flight_data_log_lqr_iris_5.csv  flight_data_log_lqr_iris_6.csv  flight_data_log_lqr_iris_7.csv
swarm_ws/src/swarm_sim/results/single_agent/: flight_data_log_hinf.csv  flight_data_log_lqr.csv
swarm_ws/src/swarm_sim/results/single_agent/pid_lqr/: flight_data_log_lqr_iris_1.csv
swarm_ws/src/swarm_sim/results/swarm/: flight_data_log_lqr.csv  flight_data_log_lqr_iris_1.csv  flight_data_log_lqr_iris_2.csv  flight_data_log_lqr_iris_3.csv  flight_data_log_lqr_iris_4.csv  flight_data_log_lqr_iris_5.csv  flight_data_log_lqr_iris_6.csv  flight_data_log_lqr_iris_7.csv
swarm_ws/src/swarm_sim/rviz/: swarm.rviz
swarm_ws/src/swarm_sim/scripts/: gz_odometry_test.py  plot_flight.py  plot_gazebo_flight.py
swarm_ws/src/swarm_sim/worlds/: empty.world
(+45 files in other folders)
